--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -18,16 +19,211 @@
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-  <!-- Start your project here-->  
-  <div style="height: 100vh">
-    <div class="flex-center flex-column">
-      <h1 class="text-hide animated fadeIn mb-4" style="background-image: url('https://mdbootstrap.com/img/logo/mdb-transparent-250px.png'); width: 250px; height: 90px;">MDBootstrap</h1>
-      <h5 class="animated fadeIn mb-3">Thank you for using our product. We're glad you're with us.</h5>
-      <p class="animated fadeIn text-muted">MDB Team</p>
+  <!-- Start your project here-->
+  <section id="sec-agri">
+    <div class="row product-head"  style="opacity: 0.8;">
+      <div class="row m-5">
+        <p class="m-5  section-head" style="text-align:center;">Agricultural Products</p>
+      </div>
+      <div class="row m-5">
+        <p class="text-center agri-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+          est
+          laborum.</p>
+      </div>
     </div>
-  </div>
+    <div class="product-section">
+      <div class="row">
+        <h2 class="h2-responsive">Products</h2>
+      </div>
+      <div class="row">
+        <!-- Card -->
+        <div class="col-sm pr-card m-5" style="width: 100%;">
+          <div class="card card-body">
+
+            <!-- Card image -->
+            <div class="view overlay">
+              <img class="card-img-top" src="img/tomato.png" alt="Card image cap">
+              <a href="#!">
+                <div class="mask rgba-white-slight"></div>
+              </a>
+            </div>
+
+            <!-- Card content -->
+            <div class="card-body">
+              <center>
+                <h4>50</h4>
+              </center>
+
+            </div>
+
+          </div>
+        </div>
+        <div class="col-sm pr-card m-5   ">
+          <div class="card card-body">
+
+            <!-- Card image -->
+            <div class="view overlay">
+              <img class="card-img-top" src="img/tomato.png" alt="Card image cap">
+              <a href="#!">
+                <div class="mask rgba-white-slight"></div>
+              </a>
+            </div>
+
+            <!-- Card content -->
+            <div class="card-body">
+              <center>
+                <h4>50</h4>
+              </center>
+
+            </div>
+
+          </div>
+        </div>
+        <div class="col-sm pr-card m-5" style="width: 100%;">
+          <div class="card card-body">
+
+            <!-- Card image -->
+            <div class="view overlay">
+              <img class="card-img-top" src="img/tomato.png" alt="Card image cap">
+              <a href="#!">
+                <div class="mask rgba-white-slight"></div>
+              </a>
+            </div>
+
+            <!-- Card content -->
+            <div class="card-body">
+              <center>
+                <h4>50</h4>
+              </center>
+
+            </div>
+
+          </div>
+        </div>
+        <div class="col-sm pr-card m-5   ">
+          <div class="card card-body">
+
+            <!-- Card image -->
+            <div class="view overlay">
+              <img class="card-img-top" src="img/tomato.png" alt="Card image cap">
+              <a href="#!">
+                <div class="mask rgba-white-slight"></div>
+              </a>
+            </div>
+
+            <!-- Card content -->
+            <div class="card-body">
+              <center>
+                <h4>50</h4>
+              </center>
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <!-- Card -->
+        <div class="col-sm pr-card m-5" style="width: 100%;">
+          <div class="card card-body">
+
+            <!-- Card image -->
+            <div class="view overlay">
+              <img class="card-img-top" src="img/tomato.png" alt="Card image cap">
+              <a href="#!">
+                <div class="mask rgba-white-slight"></div>
+              </a>
+            </div>
+
+            <!-- Card content -->
+            <div class="card-body">
+              <center>
+                <h4>50</h4>
+              </center>
+
+            </div>
+
+          </div>
+        </div>
+        <div class="col-sm pr-card m-5   ">
+          <div class="card card-body">
+
+            <!-- Card image -->
+            <div class="view overlay">
+              <img class="card-img-top" src="img/tomato.png" alt="Card image cap">
+              <a href="#!">
+                <div class="mask rgba-white-slight"></div>
+              </a>
+            </div>
+
+            <!-- Card content -->
+            <div class="card-body">
+              <center>
+                <h4>50</h4>
+              </center>
+
+            </div>
+
+          </div>
+        </div>
+        <div class="col-sm pr-card m-5" style="width: 100%;">
+          <div class="card card-body">
+
+            <!-- Card image -->
+            <div class="view overlay">
+              <img class="card-img-top" src="img/tomato.png" alt="Card image cap">
+              <a href="#!">
+                <div class="mask rgba-white-slight"></div>
+              </a>
+            </div>
+
+            <!-- Card content -->
+            <div class="card-body">
+              <center>
+                <h4>50</h4>
+              </center>
+
+            </div>
+
+          </div>
+        </div>
+        <div class="col-sm pr-card m-5   ">
+          <div class="card card-body">
+
+            <!-- Card image -->
+            <div class="view overlay">
+              <img class="card-img-top" src="img/tomato.png" alt="Card image cap">
+              <a href="#!">
+                <div class="mask rgba-white-slight"></div>
+              </a>
+            </div>
+
+            <!-- Card content -->
+            <div class="card-body">
+              <center>
+                <h4>50</h4>
+              </center>
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Card -->
+
+  </section>
+
+  <!--------------------------------Feedback and review--------------------------------->
+  <section>
+
+  </section>
   <!-- End your project here-->
 
   <!-- jQuery -->
@@ -42,4 +238,5 @@
   <script type="text/javascript"></script>
 
 </body>
+
 </html>
