--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
 
   <!-- Start your project here-->
   <section id="sec-agri">
-    <div class="row product-head"  style="opacity: 0.8;">
+    <div class="row product-head" style="opacity: 0.8;">
       <div class="row m-5">
-        <p class="m-5  section-head" style="text-align:center;">Agricultural Products</p>
-      </div>
-      <div class="row m-5">
-        <p class="text-center agri-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        <p class="text-center section-head mb-5" style="margin: auto;color: #2f2e41;">Agricultural Products</p>
+        <p class="text-center agri-description" style="color: #2f2e41;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
           consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
           pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
@@ -39,7 +38,7 @@
     </div>
     <div class="product-section">
       <div class="row">
-        <h2 class="h2-responsive">Products</h2>
+        <h2 class="h2-responsive mt-5 mb-5" style="margin: auto;font-size: 40px;">Products</h2>
       </div>
       <div class="row">
         <!-- Card -->
@@ -56,11 +55,8 @@
 
             <!-- Card content -->
             <div class="card-body">
-              <center>
-                <h4>50</h4>
-              </center>
-
-            </div>
+              <h4 class="text-center"  style="margin: auto;">50</h4>
+          </div>
 
           </div>
         </div>
@@ -77,11 +73,8 @@
 
             <!-- Card content -->
             <div class="card-body">
-              <center>
-                <h4>50</h4>
-              </center>
-
-            </div>
+              <h4 class="text-center"  style="margin: auto;">50</h4>
+          </div>
 
           </div>
         </div>
@@ -98,11 +91,8 @@
 
             <!-- Card content -->
             <div class="card-body">
-              <center>
-                <h4>50</h4>
-              </center>
-
-            </div>
+              <h4 class="text-center"  style="margin: auto;">50</h4>
+          </div>
 
           </div>
         </div>
@@ -119,11 +109,8 @@
 
             <!-- Card content -->
             <div class="card-body">
-              <center>
-                <h4>50</h4>
-              </center>
-
-            </div>
+              <h4 class="text-center"  style="margin: auto;">50</h4>
+          </div>
 
           </div>
         </div>
@@ -143,10 +130,7 @@
 
             <!-- Card content -->
             <div class="card-body">
-              <center>
-                <h4>50</h4>
-              </center>
-
+                <h4 class="text-center"  style="margin: auto;">50</h4>
             </div>
 
           </div>
@@ -164,11 +148,8 @@
 
             <!-- Card content -->
             <div class="card-body">
-              <center>
-                <h4>50</h4>
-              </center>
-
-            </div>
+              <h4 class="text-center"  style="margin: auto;">50</h4>
+          </div>
 
           </div>
         </div>
@@ -185,11 +166,8 @@
 
             <!-- Card content -->
             <div class="card-body">
-              <center>
-                <h4>50</h4>
-              </center>
-
-            </div>
+              <h4 class="text-center"  style="margin: auto;">50</h4>
+          </div>
 
           </div>
         </div>
@@ -206,11 +184,8 @@
 
             <!-- Card content -->
             <div class="card-body">
-              <center>
-                <h4>50</h4>
-              </center>
-
-            </div>
+              <h4 class="text-center" style="margin: auto;">50</h4>
+          </div>
 
           </div>
         </div>
@@ -219,7 +194,58 @@
     <!-- Card -->
 
   </section>
+  <!-- <hr class="mt-5"> -->
+  <section id="airfarms" class="mb-5 mt-5">
+    <div class="row no-gutters" >
+      <div class="air-image col-sm-5" style="width: auto;">
+        <img class="air-image img-fluid" src="img/air.jpg">
+      </div>
+      <div class="air-desc col-sm-7 flex-center flex-column"  style="background-color: #78b122;height:auto;">
+        <div class="row">
+          <p class="mt-3 mb-3 air-head" style="margin: auto;color: white;">Airfarms</p>
+        </div>
+        <p class="air-description ml-5 mr-5" style="text-align: center;color: white;">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat.
+        </p>
+      </div>
+    </div>
 
+
+
+    <div class="container">
+      <div class="row m-5">
+        <h2 class="h2-responsive mt-5 mb-5" style="margin: auto;font-size: 40px;">Products</h2>
+      </div>
+
+
+      <div class="air-product row">
+        <div class="view zoom overlay col-sm card-img mt-5 mb-5 product-img">
+          <img class="air-product-img" src="img/air-product.jpg">
+          <div class="mask flex-center waves-effect waves-light">
+            <p class="white-text product-name">Product Name</p>
+          </div>
+        </div>
+        <div class="col-sm  product-detail">
+          <p class="m-5 flex-center flex-column" style="text-align: justify;">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat.</p>
+        </div>
+      </div>
+
+
+      <hr class="m-5">
+
+
+
+
+
+    </div>
+  </section> 
   <!--------------------------------Feedback and review--------------------------------->
   <section>
 
