--- a/team.html
+++ b/team.html
@@ -26,7 +26,7 @@
              <div class="card">
             <div class="box">
             <img src="ba2.jpg" alt="team img" />
-                <h4>HELEN DUEZUSA</ba2.jpgh4>
+                <h4>HELEN DUEZUSA</h4>
                 <h5>Developer</h5>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
  The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. 
