--- a/home.html
+++ b/home.html
@@ -9,7 +9,12 @@
   <link rel="stylesheet" href="home1.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
+  <link rel="icon" href="img/agri logo.png" type="image/x-icon">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+  <!-- Google Fonts Roboto -->
+  
+
 </head>
 <body>
     
@@ -155,8 +160,40 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
   <p>links <a href="Agrivator" data-toggle="tooltip" title="Visit w3schools">Agrivator</a></p>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- Social buttons -->
+<ul class="list-unstyled list-inline text-center">
+  <li class="list-inline-item">
+    <a class="btn-floating btn-fb mx-1">
+      <i class="fab fa-facebook-f"> </i>
+    </a>
+  </li>
+  <li class="list-inline-item">
+    <a class="btn-floating btn-tw mx-1">
+      <i class="fab fa-twitter"> </i>
+    </a>
+  </li>
+  <li class="list-inline-item">
+    <a class="btn-floating btn-gplus mx-1">
+      <i class="fab fa-google-plus-g"> </i>
+    </a>
+  </li>
+  <li class="list-inline-item">
+    <a class="btn-floating btn-li mx-1">
+      <i class="fab fa-linkedin-in"> </i>
+    </a>
+  </li>
+  <li class="list-inline-item">
+    <a class="btn-floating btn-dribbble mx-1">
+      <i class="fab fa-dribbble"> </i>
+    </a>
+  </li>
+</ul>
+<!-- Social buttons -->
 </footer>
 </div>
+
+
 
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
