--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
   <link rel="icon" href="img/agri logo.png" type="image/x-icon">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-  <!-- Google Fonts Roboto -->
+
   
 
 </head>
@@ -159,7 +159,11 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>links <a href="Agrivator" data-toggle="tooltip" title="Visit w3schools">Agrivator</a></p>
+  <p>Team <a href="team.html" data-toggle="tooltip" title="Visit w3schools">Agrivator</a></p>
+  <p>Flashapp <a href="flashapp.html" data-toggle="tooltip" title="Visit w3schools">Agrivator</a></p>
+  <p>Products <a href="product.html" data-toggle="tooltip" title="Visit w3schools">Agrivator</a></p>
+  <p>Services <a href="services.html" data-toggle="tooltip" title="Visit w3schools">Agrivator</a></p>
+  <p>Vision <a href="vision.html" data-toggle="tooltip" title="Visit w3schools">Agrivator</a></p>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Social buttons -->
 <ul class="list-unstyled list-inline text-center">
@@ -225,7 +229,7 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
         <li><a href="services.html">SERVICES</a></li>
         <li><a href="#contact">CONTACT</a></li>
         <li><a href="#cart"><div class="cart">
-        <img src="img/dropbox.png">  
+        <img src="img/cart5.png">  
         </div></a></li>
 
         
