--- a/home.html
+++ b/home.html
@@ -227,7 +227,7 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
 
 
 
-<nav class="navbar navbar-default navbar-fixed-top">
+<!--<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -265,7 +265,7 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
       </ul>
     </div>
   </div>
-</nav> 
+</nav> -->
 
 <!--<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 
