--- a/home.html
+++ b/home.html
@@ -227,7 +227,7 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
 
 
 
-<!--<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -254,18 +254,18 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
             <a href="#">Air Farmers</a>
           </div>
         </div></li>
-        <li><a href="DeliveryPage.html">FLASH</a></li>
+        <li><a href="flashapp.html">FLASH</a></li>
         <li><a href="services.html">SERVICES</a></li>
         <li><a href="#contact">CONTACT</a></li>
         <li><a href="#cart"><div class="cart">
         <img src="img/cart5.png">  
-        </div></a></li>
-
-        
+        </div>
+      </a>
+      </li>
       </ul>
     </div>
   </div>
-</nav> -->
+</nav>
 
 <!--<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 
