--- a/product.html
+++ b/product.html
@@ -8,6 +8,7 @@
   <title>Products</title>
   <!-- MDB icon -->
   <!-- Font Awesome -->
+
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
   <!-- Google Fonts Roboto -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
@@ -17,6 +18,7 @@
   <link rel="stylesheet" href="css/mdb.min.css">
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/product.css">
+  <!-- <link rel="stylesheet" href="home.css"> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
@@ -24,7 +26,67 @@
 <body>
 
   <!-- Start your project here-->
-  <section id="sec-agri">
+  <section id="nav-1">
+    <!--Navbar -->
+    <nav class="navbar navbar-1 navbar-expand-lg navbar-dark rgba-white-slight">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <div class="logo">
+            <img src="img/agri_logo1.png">
+          </div>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
+          aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
+          <ul class="navbar-nav ml-auto nav-items flex-center">
+            <li class="nav-item">
+              <a class="nav-link m-1" href="#" style="color: #78b122;font-weight: 500;">
+                <p class="m-1">TEAM</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link m-1" href="#" style="color: #78b122;font-weight: 500;">
+                <p class="m-1">VISION</p>
+              </a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link m-1" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: #78b122;font-weight: 500;"><p class="m-1">PRODUCTS</p></a>
+              <div class="dropdown-menu no-gutters">
+                <a class="dropdown-item" href="#" style="color: #78b122;font-weight: 500;font-size:12px;">AGRICULTURAL PRODUCTS</a>
+                <a class="dropdown-item" href="#" style="color: #78b122;font-weight: 500;font-size:12px;">AIRFARMS</a>
+                <a class="dropdown-item" href="#" style="color: #78b122;font-weight: 500;font-size:12px;">GROWBAGS</a>
+              </div>
+            </li>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link m-1" href="#" style="color: #78b122;font-weight: 500;">
+                <p class="m-1">DART</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link m-1" href="#" style="color: #78b122;font-weight: 500;">
+                <p class="m-1">SERVICE</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link m-1" href="#" style="color: #78b122;font-weight: 500;">
+                <p class="m-1">CONTACT</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">
+                <img src="img/cart5.png">
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!--/.Navbar -->
+  </section>
+  <section id="sec-agri" class="">
     <div class="row no-gutters">
       <div class="air-desc col-sm-7 flex-center flex-column" style="background-color: #78b122;height:auto;">
         <div class="row">
@@ -63,7 +125,8 @@
 
             <!-- Card content -->
             <div class="card-body mx-auto">
-              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button" data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
+              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button"
+                data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
 
 
             </div>
@@ -83,7 +146,8 @@
 
             <!-- Card content -->
             <div class="card-body mx-auto">
-              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button" data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
+              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button"
+                data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
 
 
             </div>
@@ -103,11 +167,9 @@
 
             <!-- Card content -->
             <div class="card-body mx-auto">
-              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button" data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
-
-
+              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button"
+                data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
             </div>
-
           </div>
         </div>
         <div class="col-sm pr-card m-5 m-sm-0">
@@ -123,7 +185,8 @@
 
             <!-- Card content -->
             <div class="card-body mx-auto">
-              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button" data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
+              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button"
+                data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
 
 
             </div>
@@ -146,7 +209,8 @@
 
             <!-- Card content -->
             <div class="card-body mx-auto">
-              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button" data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
+              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button"
+                data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
 
             </div>
 
@@ -165,27 +229,8 @@
 
             <!-- Card content -->
             <div class="card-body mx-auto">
-              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button" data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
-
-
-            </div>
-
-          </div>
-        </div>
-        <div class="col-sm pr-card m-5 m-sm-0">
-          <div class="card card-body">
-
-            <!-- Card image -->
-            <div class="view overlay">
-              <img class="card-img-top" src="img/tomato.png" alt="Card image cap">
-              <a href="#!">
-                <div class="mask rgba-white-slight"></div>
-              </a>
-            </div>
-
-            <!-- Card content -->
-            <div class="card-body mx-auto">
-              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button" data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
+              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button"
+                data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
 
 
             </div>
@@ -205,7 +250,29 @@
 
             <!-- Card content -->
             <div class="card-body mx-auto">
-              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button" data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
+              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button"
+                data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
+
+
+            </div>
+
+          </div>
+        </div>
+        <div class="col-sm pr-card m-5 m-sm-0">
+          <div class="card card-body">
+
+            <!-- Card image -->
+            <div class="view overlay">
+              <img class="card-img-top" src="img/tomato.png" alt="Card image cap">
+              <a href="#!">
+                <div class="mask rgba-white-slight"></div>
+              </a>
+            </div>
+
+            <!-- Card content -->
+            <div class="card-body mx-auto">
+              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button"
+                data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
             </div>
 
           </div>
@@ -341,7 +408,8 @@
 
             <!-- Card content -->
             <div class="card-body mx-auto">
-              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button" data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
+              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button"
+                data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
             </div>
 
           </div>
@@ -359,7 +427,8 @@
 
             <!-- Card content -->
             <div class="card-body mx-auto">
-              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button" data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
+              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button"
+                data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
             </div>
 
           </div>
@@ -377,7 +446,8 @@
 
             <!-- Card content -->
             <div class="card-body mx-auto">
-              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button" data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
+              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button"
+                data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
             </div>
 
           </div>
@@ -395,7 +465,8 @@
 
             <!-- Card content -->
             <div class="card-body mx-auto">
-              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button" data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
+              <a tabindex="0" class="btn buy-btn pdt-detail" data-placement="bottom" title="Tomato" role="button"
+                data-toggle="popover" data-trigger="focus" title="Dismissible popover">More Detail</a>
             </div>
 
           </div>
@@ -407,15 +478,15 @@
     <!-- <div class="col-3 p-5" style="background-color:#78b122;color: #2f2e41;" ><h2 class="text-center p-3">Tomato</h2><p class="ml-3 mr-3">Price : 50rs<br>Exp.Date : 20-02-2020</p></div> -->
   </section>
   <script>
-    $(document).ready(function(){
-        $('.pdt-detail').popover({
-          title: '<h2 class="text-center ">Tomato</h2>',
-          content: '<div class=" " style="background-color:#78b122;color: #2f2e41;" ><p class="">Price : 50rs<br>Exp.Date : 20-02-2020</p><br><a href="boxs.html">Add to cart <i class="ml-1 fas fa-shopping-cart"></i></a></div>',
-          html: true
-        });   
-        
+    $(document).ready(function () {
+      $('.pdt-detail').popover({
+        title: '<h2 class="text-center ">Tomato</h2>',
+        content: '<div class=" " style="background-color:#78b122;color: #2f2e41;" ><p class="">Price : 50rs<br>Exp.Date : 20-02-2020</p><br><a href="boxs.html">Add to cart <i class="ml-1 fas fa-shopping-cart"></i></a></div>',
+        html: true
+      });
+
     });
-    </script>
+  </script>
   <!-- End your project here-->
   <!-- Development version -->
   <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
