--- a/flashapp.html
+++ b/flashapp.html
@@ -87,6 +87,7 @@
   <h1 class="card-title h1"><center><strong>Dart App</strong></center></h1>
   <!-- Subtitle -->
   <p class="mytxt my-4 font-weight-bold">A Platfrom for selling Fast Moving Consumer Goods</p>
+  <hr class="my-4">
 
   <div class="container">
       <div class="row">
