--- a/home.html
+++ b/home.html
@@ -244,16 +244,7 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
       <ul class="nav navbar-nav navbar-right">
         <li><a href="team.html">TEAM</a></li>
         <li><a href="vision.html">VISION</a></li>
-        <li><div class="dropdown" >
-          <a href="product.html">
-          <button class="dropbtn" >PRODUCTS
-            <i class="fa fa-caret-down"></i>
-          </button></a>
-          <div class="dropdown-content">
-            <a href="#">Agricultural Products</a>
-            <a href="#">Air Farmers</a>
-          </div>
-        </div></li>
+        <li><a href="product.html">PRODUCTS</a></li>
         <li><a href="flashapp.html">FLASH</a></li>
         <li><a href="services.html">SERVICES</a></li>
         <li><a href="#contact">CONTACT</a></li>
