--- a/team.html
+++ b/team.html
@@ -4,14 +4,75 @@
     <title>team section</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="css/product.css" type="text/css">
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     
     </head>
     <body>
-    <section class="team">
+        <section id="nav-1" class="mb-5">
+            <!--Navbar -->
+            <nav class="navbar navbar-1 navbar-expand-lg navbar-dark rgba-white-slight fixed-top">
+              <div class="container">
+                <a class="navbar-brand" href="#">
+                  <div class="logo">
+                    <img src="img/agri_logo1.png">
+                  </div>
+                </a>
+                <button class="navbar-toggler" style="background-color: #78b122;" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
+                  aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
+                  <ul class="navbar-nav ml-auto nav-items flex-center">
+                    <li class="nav-item">
+                      <a class="nav-link m-1" href="team.html" style="color: #78b122;font-weight: 500;">
+                        <p class="m-1">TEAM</p>
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link m-1" href="vision.html" style="color: #78b122;font-weight: 500;">
+                        <p class="m-1">VISION</p>
+                      </a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link m-1" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: #78b122;font-weight: 500;"><p class="m-1">PRODUCTS</p></a>
+                      <div class="dropdown-menu no-gutters">
+                        <a class="dropdown-item" href="product.html" style="color: #78b122;font-weight: 500;font-size:12px;">AGRICULTURAL PRODUCTS</a>
+                        <a class="dropdown-item" href="product.html" style="color: #78b122;font-weight: 500;font-size:12px;">AIRFARMS</a>
+                        <a class="dropdown-item" href="product.html" style="color: #78b122;font-weight: 500;font-size:12px;">GROWBAGS</a>
+                      </div>
+                    </li>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link m-1" href="flashapp.html" style="color: #78b122;font-weight: 500;">
+                        <p class="m-1">DART</p>
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link m-1" href="services.html" style="color: #78b122;font-weight: 500;">
+                        <p class="m-1">SERVICE</p>
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link m-1" href="home.html" style="color: #78b122;font-weight: 500;">
+                        <p class="m-1">CONTACT</p>
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link">
+                        <img src="img/cart5.png">
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </nav>
+            <!--/.Navbar -->
+          </section>
+    <section class="team mt-5">
         <div class="container">
             <h1>Our Team</h1>
         <div class="card">
