--- a/farmplan.html
+++ b/farmplan.html
@@ -41,18 +41,86 @@
   margin-top:0.5%;
  }
 
-
+ .navbar-1 {
+    margin-bottom: 0;
+    background-color: #fff;
+    z-index: 9999;
+    border: 0;
+    font-size: 12px !important;
+    line-height: 1.42857143 !important;
+    letter-spacing: 4px;
+    border-radius: 0;
+  }
+  .navbar-nav li a:hover, .navbar-nav li.active a {
+    color: #fff !important;
+    background-color: #538742!important;
+  }
+  
 
 
 </style>
 </head>
 <body>
 
-   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <!-- Brand -->
+  <nav class="navbar navbar-1 navbar-expand-lg navbar-dark rgba-white-slight">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <div class="logo">
+          <img src="img/agri_logo1.png">
+        </div>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
+        aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
+        <ul class="navbar-nav ml-auto nav-items flex-center">
+          <li class="nav-item">
+            <a class="nav-link m-1" href="#" style="color: #78b122;font-weight: 500;">
+              <p class="m-1">TEAM</p>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link m-1" href="#" style="color: #78b122;font-weight: 500;">
+              <p class="m-1">VISION</p>
+            </a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link m-1" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: #78b122;font-weight: 500;"><p class="m-1">PRODUCTS</p></a>
+            <div class="dropdown-menu no-gutters">
+              <a class="dropdown-item" href="#" style="color: #78b122;font-weight: 500;font-size:12px;">AGRICULTURAL PRODUCTS</a>
+              <a class="dropdown-item" href="#" style="color: #78b122;font-weight: 500;font-size:12px;">AIRFARMS</a>
+              <a class="dropdown-item" href="#" style="color: #78b122;font-weight: 500;font-size:12px;">GROWBAGS</a>
+            </div>
+          </li>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link m-1" href="#" style="color: #78b122;font-weight: 500;">
+              <p class="m-1">DART</p>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link m-1" href="#" style="color: #78b122;font-weight: 500;">
+              <p class="m-1">SERVICE</p>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link m-1" href="#" style="color: #78b122;font-weight: 500;">
+              <p class="m-1">CONTACT</p>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link">
+              <img src="img/cart5.png">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+   <!-- <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <a class="navbar-brand" href="#">Logo</a>
 
-  <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
       <a class="nav-link" href="#">Home</a>
@@ -61,7 +129,6 @@
       <a class="nav-link" href="#">Products</a>
     </li>
 
-    <!-- Dropdown -->
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
         SERVICES
@@ -73,7 +140,7 @@
       </div>
     </li>
   </ul>
-</nav>
+</nav> -->
 <br>
   
 
