--- a/flashapp.html
+++ b/flashapp.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="css/mdb.min.css">
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/flashstyle.css">
+  <link rel="stylesheet" href="css/product.css">
 </head>
 <body>
   <!-- Start your project here-->
@@ -24,7 +25,7 @@
   <!--Navbar -->
   <nav class="navbar navbar-1 navbar-expand-lg navbar-dark rgba-white-slight">
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="home.html">
         <div class="logo">
           <img src="img/agri_logo1.png">
         </div>
@@ -36,36 +37,36 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
         <ul class="navbar-nav ml-auto nav-items flex-center">
           <li class="nav-item">
-            <a class="nav-link m-1" href="#" style="color: #78b122;font-weight: 500;">
+            <a class="nav-link m-1" href="team.html" style="color: #78b122;font-weight: 500;">
               <p class="m-1">TEAM</p>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link m-1" href="#" style="color: #78b122;font-weight: 500;">
+            <a class="nav-link m-1" href="vision.html" style="color: #78b122;font-weight: 500;">
               <p class="m-1">VISION</p>
             </a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link m-1" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: #78b122;font-weight: 500;"><p class="m-1">PRODUCTS</p></a>
             <div class="dropdown-menu no-gutters">
-              <a class="dropdown-item" href="#" style="color: #78b122;font-weight: 500;font-size:12px;">AGRICULTURAL PRODUCTS</a>
-              <a class="dropdown-item" href="#" style="color: #78b122;font-weight: 500;font-size:12px;">AIRFARMS</a>
-              <a class="dropdown-item" href="#" style="color: #78b122;font-weight: 500;font-size:12px;">GROWBAGS</a>
+              <a class="dropdown-item" href="product.html" style="color: #78b122;font-weight: 500;font-size:12px;">AGRICULTURAL PRODUCTS</a>
+              <a class="dropdown-item" href="product.html" style="color: #78b122;font-weight: 500;font-size:12px;">AIRFARMS</a>
+              <a class="dropdown-item" href="product.html" style="color: #78b122;font-weight: 500;font-size:12px;">GROWBAGS</a>
             </div>
           </li>
           </li>
           <li class="nav-item">
-            <a class="nav-link m-1" href="#" style="color: #78b122;font-weight: 500;">
+            <a class="nav-link m-1" href="flashapp.html" style="color: #78b122;font-weight: 500;">
               <p class="m-1">DART</p>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link m-1" href="#" style="color: #78b122;font-weight: 500;">
+            <a class="nav-link m-1" href="services.html" style="color: #78b122;font-weight: 500;">
               <p class="m-1">SERVICE</p>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link m-1" href="#" style="color: #78b122;font-weight: 500;">
+            <a class="nav-link m-1" href="home.html" style="color: #78b122;font-weight: 500;">
               <p class="m-1">CONTACT</p>
             </a>
           </li>
