--- a/product.html
+++ b/product.html
@@ -30,7 +30,7 @@
     <!--Navbar -->
     <nav class="navbar navbar-1 navbar-expand-lg navbar-dark rgba-white-slight fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="home.html">
           <div class="logo">
             <img src="img/agri_logo1.png">
           </div>
