--- a/vision.html
+++ b/vision.html
@@ -5,7 +5,6 @@
     <title>AGRIVATOR</title>
 
 
-<head>
     
     <link rel="stylesheet" type="text/css" href="styleab.css">
     <link rel="stylesheet" type="text/css" href="css/product.css">
@@ -49,7 +48,7 @@
         <!--Navbar -->
         <nav class="navbar navbar-1 navbar-expand-lg navbar-dark rgba-white-slight fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="home.html">
                     <div class="logo">
                         <img src="img/agri_logo1.png">
                     </div>
