Added header to feedback page

--- a/feedback.html
+++ b/feedback.html
@@ -11,10 +11,42 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
         <link rel="stylesheet" href="form.css" >
+        <link rel="stylesheet" href="home.css" >
         <script src="form.js"></script>
+        <title>Feedback</title>
     </head>
     <body >
-        <div class="container">
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="home.html">
+                  <div class="logo">
+                 <img src="img/agri_logo1.png"></div>
+                </a>
+              </div>
+              <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav navbar-right">
+                  <li><a href="team.html">TEAM</a></li>
+                  <li><a href="vision.html">VISION</a></li>
+                  <li><a href="product.html">PRODUCTS</a></li>
+                  <li><a href="flashapp.html">FLASH</a></li>
+                  <li><a href="services.html">SERVICES</a></li>
+                  <li><a href="#contact">CONTACT</a></li>
+                  <li><a href="#cart"><div class="cart">
+                  <img src="img/cart5.png">  
+                  </div>
+                </a>
+                </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        <div class="container" style="margin-top: 40px;">
             <div class="imagebg"></div>
             <div class="row " style="margin-top: 50px">
                 <div class="col-md-6 col-md-offset-3 form-container">
