--- a/team.html
+++ b/team.html
@@ -4,91 +4,30 @@
     <title>team section</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <link rel="stylesheet" href="css/product.css" type="text/css">
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     
     </head>
     <body>
-        <section id="nav-1" class="mb-5">
-            <!--Navbar -->
-            <nav class="navbar navbar-1 navbar-expand-lg navbar-dark rgba-white-slight fixed-top">
-              <div class="container">
-                <a class="navbar-brand" href="home.html">
-                  <div class="logo">
-                    <img src="img/agri_logo1.png">
-                  </div>
-                </a>
-                <button class="navbar-toggler" style="background-color: #78b122;" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
-                  aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
-                  <ul class="navbar-nav ml-auto nav-items flex-center">
-                    <li class="nav-item">
-                      <a class="nav-link m-1" href="team.html" style="color: #78b122;font-weight: 500;">
-                        <p class="m-1">TEAM</p>
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link m-1" href="vision.html" style="color: #78b122;font-weight: 500;">
-                        <p class="m-1">VISION</p>
-                      </a>
-                    </li>
-                    <li class="nav-item dropdown">
-                      <a class="nav-link m-1" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: #78b122;font-weight: 500;"><p class="m-1">PRODUCTS</p></a>
-                      <div class="dropdown-menu no-gutters">
-                        <a class="dropdown-item" href="product.html" style="color: #78b122;font-weight: 500;font-size:12px;">AGRICULTURAL PRODUCTS</a>
-                        <a class="dropdown-item" href="product.html" style="color: #78b122;font-weight: 500;font-size:12px;">AIRFARMS</a>
-                        <a class="dropdown-item" href="product.html" style="color: #78b122;font-weight: 500;font-size:12px;">GROWBAGS</a>
-                      </div>
-                    </li>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link m-1" href="flashapp.html" style="color: #78b122;font-weight: 500;">
-                        <p class="m-1">DART</p>
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link m-1" href="services.html" style="color: #78b122;font-weight: 500;">
-                        <p class="m-1">SERVICE</p>
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link m-1" href="home.html" style="color: #78b122;font-weight: 500;">
-                        <p class="m-1">CONTACT</p>
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link">
-                        <img src="img/cart5.png">
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </nav>
-            <!--/.Navbar -->
-          </section>
-    <section class="team mt-5">
+    <section class="team">
         <div class="container">
             <h1>Our Team</h1>
         <div class="card">
             <div class="box">
             <img src="ba1.jpg" alt="team img" />
-                <h4>KING JAMES</h4>
-                <h5>Manager</h5>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                <h4>SARATH S</h4>
+                <h5>CEO</h5>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                </p>
             </div>
             </div>
              <div class="card">
             <div class="box">
             <img src="ba2.jpg" alt="team img" />
-                <h4>HELEN DUEZUSA</h4>
-                <h5>Developer</h5>
+                <h4>IRENE TENISON</h4>
+                <h5>CTO</h5>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
  The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. 
                </p>
@@ -97,8 +36,8 @@
              <div class="card">
             <div class="box">
             <img src="ba3.jpg" alt="team img" />
-                <h4>AZAD BIN THUGLUQ</h4>
-                <h5>Design Lead</h5>
+                <h4>CEDRIC JACKSON</h4>
+                <h5>CFO</h5>
                 <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.
  Various versions have evolved over the years, sometimes by accident, sometimes o
                </p>
@@ -107,8 +46,8 @@
              <div class="card">
             <div class="box">
             <img src="ba4.jpg" alt="team img" />
-                <h4>APROTITIDE JOSH</h4>
-                <h5>Techniqual Lead</h5>
+                <h4>ARUN S KUMAR</h4>
+                <h5>COO</h5>
                 <p> It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 Why do we use it?
                </p>
