--- a/farmset.html
+++ b/farmset.html
@@ -5,9 +5,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
- <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="bootstrap-3.3.3-dist/css/bootstrap.css">
-  <link rel="stylesheet" href="bootstrap-3.3.3-dist/css/bootstrap-responsive.css">-->
+  <link rel="stylesheet" href="css/product.css">
 
    
  <style>
@@ -15,6 +13,7 @@
   text-align:center;
   margin-bottom:5%;
   color:green;
+  margin-top:8%;
  }
 
 #para2{
@@ -23,7 +22,7 @@
  }
 #para3{
    margin-bottom:5%;
-   margin-left:8%;
+   margin-left:16%;
    border: 1px solid;
   padding: 15px;
   box-shadow: 5px 10px 9px #888888;
@@ -55,6 +54,10 @@
   width: 100%;
   height: auto;
 }
+#text{
+ text-align:right;
+ margin-right:20%;
+ }
 
  
 
@@ -64,13 +67,84 @@
 </head>
 <body>
 
+
+       <!-- Start your project here-->
+  <section id="nav-1">
+    <!--Navbar -->
+    <nav class="navbar navbar-1 navbar-expand-lg navbar-dark rgba-white-slight fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="home.html">
+          <div class="logo">
+            <img src="img/agri_logo1.png">
+          </div>
+        </a>
+        <button class="navbar-toggler" style="background-color: #78b122;" type="button" data-toggle="collapse"
+          data-target="#navbarSupportedContent-4" aria-controls="navbarSupportedContent-4" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
+          <ul class="navbar-nav ml-auto nav-items flex-center">
+            <li class="nav-item">
+              <a class="nav-link m-1" href="team.html" style="color: #78b122;font-weight: 500;">
+                <p class="m-1">TEAM</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link m-1" href="vision.html" style="color: #78b122;font-weight: 500;">
+                <p class="m-1">VISION</p>
+              </a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link m-1" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false" style="color: #78b122;font-weight: 500;">
+                <p class="m-1">PRODUCTS</p>
+              </a>
+              <div class="dropdown-menu no-gutters">
+                <a class="dropdown-item" href="product.html"
+                  style="color: #78b122;font-weight: 500;font-size:12px;">AGRICULTURAL PRODUCTS</a>
+                <a class="dropdown-item" href="product.html"
+                  style="color: #78b122;font-weight: 500;font-size:12px;">AIRFARMS</a>
+                <a class="dropdown-item" href="product.html"
+                  style="color: #78b122;font-weight: 500;font-size:12px;">GROWBAGS</a>
+              </div>
+            </li>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link m-1" href="flashapp.html" style="color: #78b122;font-weight: 500;">
+                <p class="m-1">DART</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link m-1" href="services.html" style="color: #78b122;font-weight: 500;">
+                <p class="m-1">SERVICE</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link m-1" href="home.html" style="color: #78b122;font-weight: 500;">
+                <p class="m-1">CONTACT</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">
+                <img src="img/cart5.png">
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!--/.Navbar -->
+  </section>
+  
+
      <div class="container" >
 
 	 <div  id="para1"class="services">
         <h1>SERVICES</h1>
      </div>
 	 
-	 <div class="team" id="para31">
+	 <div class="team" id="para3">
 	    <div class="row">
 		
 		
@@ -84,7 +158,7 @@
 		    <h3 id="para2">Farm setting</h3>
 			<p id="para4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> 
             
-			
+			<div class="desc"><h4 id="text">Amt: $500</h4></div>
 			
 			<button class="btn" data-toggle="modal" data-target="#myModal1" id="para5" >NEED SERVICE!</button>
 			<div id="myModal1" class="modal fade" role="dialog">
