--- a/agri-product.html
+++ b/agri-product.html
@@ -104,10 +104,10 @@
             <div class="row mx-auto">
                 <div class="col-sm-5 prod-card mx-auto">
                     <div class="row">
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 prod-detail ">
                             <img class="prod-image" src="img/tomato.png">
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 prod-detail">
                             <h3>Tomato</h3>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit
@@ -118,7 +118,7 @@
                 </div>
                 <div class="col-sm-5 prod-card mx-auto">
                     <div class="row">
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 prod-detail">
                             <h3>Tomato</h3>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit
@@ -132,10 +132,10 @@
                 </div>
                 <div class="col-sm-5 prod-card mx-auto">
                     <div class="row">
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 prod-detail">
                             <img class="prod-image" src="img/tomato.png">
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 prod-detail">
                             <h3>Tomato</h3>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit
@@ -146,7 +146,7 @@
                 </div>
                 <div class="col-sm-5 prod-card mx-auto">
                     <div class="row">
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 prod-detail">
                             <h3>Tomato</h3>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit
