--- a/air.html
+++ b/air.html
@@ -104,7 +104,7 @@
             <div class="row">
                 <!--Start Welcome Image-->
                 <div class="col-sm-6">
-                    <div class="welcome-img">
+                    <div class="welcome-img flex-center">
                         <img src="img/Aerospring+Products.png" class="img-responsive" alt="Image">
                     </div>
                 </div>
@@ -112,7 +112,7 @@
 
                 <!--Start Welcome Content-->
                 <div class="col-sm-6 air-pdt">
-                    <div style="margin-top: auto;">
+                    <div class="air-prod" style="margin-top: auto;">
                         <h2>Aeroponics</h2>
                         <p>Lorem ipsum dolor sit amet, consectetuer
                             adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam
@@ -131,7 +131,7 @@
             <div class="row mt-5">
                 <!--Start Welcome Image-->
                 <div class="col-sm-6">
-                    <div class="welcome-img">
+                    <div class="welcome-img flex-center">
                         <img src="img/air2.png" class="img-responsive" alt="Image">
                     </div>
                 </div>
@@ -139,7 +139,7 @@
 
                 <!--Start Welcome Content-->
                 <div class="col-sm-6 air-pdt">
-                    <div style="margin-top: auto;">
+                    <div class="air-prod" style="margin-top: auto;">
                         <h2>Aeroponics</h2>
                         <p>Lorem ipsum dolor sit amet, consectetuer
                             adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam
