--- a/services.html
+++ b/services.html
@@ -7,6 +7,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="services.css">
   <link rel="stylesheet" href="css/product.css">
 <style>
 #aa
@@ -109,11 +110,12 @@
  <div class="row" id="responsive">
      
             <!-- Card -->
-	 <div class="col-sm-8 col-md-3 col-lg-3">
-         <div class="card" id="shadow">
+	 <div class="col-sm-8 col-md-3 col-lg-3 card-ser">
+         <div class="card border-0" id="shadow">
+
 <!-- Card image -->
          <a href="farmset.html">
-        <img class="card-img-top" src="img/farmset.png" alt="Card image cap"></a>
+        <img class="card-img-top" src="img/farmsetting.jpg" style="height: 200px;"  alt="Card image cap"></a>
 <!-- Card content -->
         <div class="card-body" id="aa">
 <!-- Title -->
@@ -127,10 +129,10 @@
              <!-- Card -->
 			
     <div class="col-sm-8 col-md-3 col-lg-3">
-	    <div class="card" id="shadow">
+	    <div class="card border-0" id="shadow">
 <!-- Card image -->
          <a href="farmplan.html">
-         <img class="card-img-top" src="img/farmplan.png" alt="Card image cap"></a>
+         <img class="card-img-top" src="img/farmplan.jpg"  style="height: 200px;" alt="Card image cap"></a>
 <!-- Card content -->
          <div class="card-body" id="aa">
 <!-- Title -->
@@ -144,10 +146,10 @@
 
              <!-- Card -->
 	 <div class="col-sm-8 col-md-3 col-lg-3">		 
-         <div class="card"  id="shadow">
+         <div class="card border-0"  id="shadow">
 <!-- Card image -->
          <a href="greenhut.html">
-         <img class="card-img-top" src="img/greenhut.png" alt="Card image cap"></a>
+         <img class="card-img-top" src="img/greenhut.jpg"  style="height: 200px;" alt="Card image cap"></a>
 <!-- Card content -->
          <div class="card-body" id="aa">
 <!-- Title -->
@@ -159,10 +161,10 @@
 	 </div>
 		     <!-- Card -->
 	 <div class="col-sm-8 col-md-3 col-lg-3">
-         <div class="card" id="shadow" >
+         <div class="card border-0" id="shadow" >
 <!-- Card image -->
          <a href="farmplan.html">
-         <img class="card-img-top" src="img/farmplan.png" alt="Card image cap"></a>
+         <img class="card-img-top" src="img/farmplan.jpg" style="height: 200px;" alt="Card image cap"></a>
 <!-- Card content -->
          <div class="card-body" id="aa">
 <!-- Title -->
@@ -177,4 +179,21 @@
 		 
 </div>
 </body>
+<!-- Development version -->
+<script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
+
+<!-- Production version -->
+<script src="https://unpkg.com/@popperjs/core@2"></script>
+<!-- jQuery -->
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<!-- Bootstrap tooltips -->
+<script type="text/javascript" src="js/popper.js"></script>
+<script type="text/javascript" src="js/popper.min.js"></script>
+<!-- Bootstrap core JavaScript -->
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!-- MDB core JavaScript -->
+<script type="text/javascript" src="js/mdb.min.js"></script>
+<!-- Your custom scripts (optional) -->
+<script type="text/javascript"></script>
+
 </html>
