--- a/product.html
+++ b/product.html
@@ -29,64 +29,64 @@
   <!-- Start your project here-->
   <section id="nav-1">
     <!--Navbar -->
-    <nav class="navbar navbar-1 navbar-expand-lg navbar-dark rgba-white-slight fixed-top">
+    <nav class="navbar navbar-1 navbar-expand-lg navbar-light fixed-top " style="border: none;" >
       <div class="container">
-        <a class="navbar-brand" href="home.html">
-          <div class="logo">
-            <img src="img/agri_logo1.png">
-          </div>
-        </a>
-        <button class="navbar-toggler" style="background-color: #78b122;" type="button" data-toggle="collapse"
-          data-target="#navbarSupportedContent-4" aria-controls="navbarSupportedContent-4" aria-expanded="false"
-          aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
-          <ul class="navbar-nav ml-auto nav-items flex-center">
-            <li class="nav-item">
-              <a class="nav-link m-1" href="team.html" style="color: #78b122;font-weight: 500;">
-                <p class="m-1">TEAM</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link m-1" href="vision.html" style="color: #78b122;font-weight: 500;">
-                <p class="m-1">VISION</p>
-              </a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link m-1" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false" style="color: #78b122;font-weight: 500;">
-                <p class="m-1">PRODUCTS</p>
-              </a>
-              <div class="dropdown-menu no-gutters">
-                <a class="dropdown-item" href="agri-product.html"
-                  style="color: #78b122;font-weight: 500;font-size:12px;">AGRICULTURAL PRODUCTS</a>
-                <a class="dropdown-item" href="air.html"
-                  style="color: #78b122;font-weight: 500;font-size:12px;">AIRFARMS</a>
-                <a class="dropdown-item" href="growbags.html"
-                  style="color: #78b122;font-weight: 500;font-size:12px;">GROWBAGS</a>
+          <a class="navbar-brand" href="home.html">
+              <div class="logo">
+                  <img src="img/agri_logo1.png">
               </div>
-            </li>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link m-1" href="services.html" style="color: #78b122;font-weight: 500;">
-                <p class="m-1">SERVICE</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link m-1" href="home.html" style="color: #78b122;font-weight: 500;">
-                <p class="m-1">CONTACT</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link">
-                <img src="img/cart5.png">
-              </a>
-            </li>
-          </ul>
-        </div>
+          </a>
+          <button class="navbar-toggler" style="background-color: white;" type="button" data-toggle="collapse"
+              data-target="#navbarSupportedContent-4" aria-controls="navbarSupportedContent-4"
+              aria-expanded="false" aria-label="Toggle navigation" style="border: none;">
+              <span class="navbar-toggler-icon "></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
+              <ul class="navbar-nav ml-auto nav-items flex-center">
+                  <li class="nav-item">
+                      <a class="nav-link m-1" href="team.html" style="color: #78b122;font-weight: 500;">
+                          <p class="m-1">TEAM</p>
+                      </a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link m-1" href="vision.html" style="color: #78b122;font-weight: 500;">
+                          <p class="m-1">VISION</p>
+                      </a>
+                  </li>
+                  <li class="nav-item dropdown">
+                      <a class="nav-link m-1" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                          aria-haspopup="true" aria-expanded="false" style="color: #78b122;font-weight: 500;">
+                          <p class="m-1">PRODUCTS</p>
+                      </a>
+                      <div class="dropdown-menu no-gutters">
+                          <a class="dropdown-item" href="agri-product.html"
+                              style="color: #78b122;font-weight: 500;font-size:12px;">AGRICULTURAL PRODUCTS</a>
+                          <a class="dropdown-item" href="air.html"
+                              style="color: #78b122;font-weight: 500;font-size:12px;">AIRFARMS</a>
+                          <a class="dropdown-item" href="#"
+                              style="color: #78b122;font-weight: 500;font-size:12px;">GROWBAGS</a>
+                      </div>
+                  </li>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link m-1" href="services.html" style="color: #78b122;font-weight: 500;">
+                          <p class="m-1">SERVICE</p>
+                      </a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link m-1" href="home.html" style="color: #78b122;font-weight: 500;">
+                          <p class="m-1">CONTACT</p>
+                      </a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link">
+                          <img src="img/cart5.png">
+                      </a>
+                  </li>
+              </ul>
+          </div>
       </div>
-    </nav>
+  </nav>
     <!--/.Navbar -->
   </section>
   <section id="sec-agri" class="mt-5">
