--- a/team.html
+++ b/team.html
@@ -5,6 +5,8 @@
     <title>team section</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="css/product.css" type="text/css">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -15,17 +17,17 @@
 <body>
     <section id="nav-1">
         <!--Navbar -->
-        <nav class="navbar navbar-1 navbar-expand-lg navbar-dark rgba-white-slight fixed-top">
+        <nav class="navbar navbar-1 navbar-expand-lg navbar-light fixed-top " style="border: none;" >
             <div class="container">
                 <a class="navbar-brand" href="home.html">
                     <div class="logo">
                         <img src="img/agri_logo1.png">
                     </div>
                 </a>
-                <button class="navbar-toggler" style="background-color: #78b122;" type="button" data-toggle="collapse"
+                <button class="navbar-toggler" style="background-color: white;" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent-4" aria-controls="navbarSupportedContent-4"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    aria-expanded="false" aria-label="Toggle navigation" style="border: none;">
+                    <span class="navbar-toggler-icon "></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
                     <ul class="navbar-nav ml-auto nav-items flex-center">
@@ -77,11 +79,13 @@
     </section>
     <section class="team">
         <div class="container">
-            <h1>Our Team</h1>
+            <div class="head">
+                <h1>Our Team</h1>
+            </div>
             <div class="row">
-                <div class="card col-sm hoverable hover m-1">
+                <div class="card col-sm hoverable hover">
                     <div class="box">
-                        <img src="ba1.jpg" alt="team img" />
+                        <img src="img/ba1.jpg" alt="team img" />
                         <h4>SARATH S</h4>
                         <h5>CEO</h5>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
@@ -92,9 +96,9 @@
                         </p>
                     </div>
                 </div>
-                <div class="card col-sm m-1">
+                <div class="card col-sm">
                     <div class="box">
-                        <img src="ba2.jpg" alt="team img" />
+                        <img src="img/ba2.jpg" alt="team img" />
                         <h4>IRENE TENISON</h4>
                         <h5>CTO</h5>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a
@@ -106,9 +110,9 @@
                         </p>
                     </div>
                 </div>
-                <div class="card col-sm m-1">
+                <div class="card col-sm">
                     <div class="box">
-                        <img src="ba3.jpg" alt="team img" />
+                        <img src="img/ba3.jpg" alt="team img" />
                         <h4>CEDRIC JACKSON</h4>
                         <h5>CFO</h5>
                         <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default
@@ -118,9 +122,9 @@
                         </p>
                     </div>
                 </div>
-                <div class="card col-sm m-1">
+                <div class="card col-sm">
                     <div class="box">
-                        <img src="ba4.jpg" alt="team img" />
+                        <img src="img/ba4.jpg" alt="team img" />
                         <h4>ARUN S KUMAR</h4>
                         <h5>COO</h5>
                         <p> It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
